--- a/styles/CallToAction.module.css
+++ b/styles/CallToAction.module.css
@@ -17,15 +17,24 @@
 .images {
   max-width: 560px;
   position: relative;
+  width: 100%;
+  height: 412px;
+  /* height: 600px; */
 }
 
 .imageBack {
   border-radius: 5px;
-
   padding: 0;
+  object-fit: contain;
 
   /* width={560} height={440} */
 }
+
+/* @media (max-width: 1000px) {
+  .images {
+    height: 200px;
+  }
+} */
 .imageFront {
   position: absolute;
 
