--- a/styles/Benefits.module.css
+++ b/styles/Benefits.module.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1190px;
+  max-width: var(--container-width);
   padding: 0 15px;
   margin: 0 auto;
   text-align: center;
@@ -28,7 +28,7 @@
   transform: translateX(-50%);
   height: 3px;
   width: 100px;
-  background-color: #064488;
+  background-color: var(--primary-color);
 }
 
 .items {
@@ -53,7 +53,7 @@
 .item_image {
   width: 120px;
   height: 120px;
-  background-color: #064488;
+  background-color: var(--primary-color);
   border-radius: 5% 5% 0 5%;
   position: relative;
   margin-bottom: 20px;
