--- a/styles/Capabilities.module.css
+++ b/styles/Capabilities.module.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1190px;
+  max-width: var(--container-width);
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -43,7 +43,7 @@
   left: 0;
   height: 3px;
   width: 100px;
-  background-color: #064488;
+  background-color: var(--primary-color);
 }
 
 .cities {
@@ -63,19 +63,18 @@
   left: 0;
   width: 8px;
   height: 8px;
-  background-color: #303030;
+  background-color: var(--font-color);
 }
 
 .text_bottom {
   padding: 30px 0;
 }
 
-.callToAction_link {
-}
-
-.callToAction_link a {
+.callToAction_btn {
+  background-color: transparent;
+  border: none;
   font-weight: 700;
-  color: #064488;
+  color: var(--primary-color);
   font-size: 18px;
 
   text-decoration: solid underline currentColor 1px;
