--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,7 @@
 .section {
   background-color: transparent;
-  max-width: 1190px;
-  padding-top: 40px;
+  max-width: var(--container-width);
+  padding-top: 50px;
   padding-bottom: 60px;
   margin: 0 auto;
 }
@@ -43,7 +43,7 @@
   line-height: 28px;
   cursor: pointer;
   text-decoration: none;
-  color: #303030;
+  color: var(--font-color);
 }
 
 .tel {
@@ -59,32 +59,129 @@
   line-height: 28px;
   cursor: pointer;
   text-decoration: none;
-  /* color: #fff; */
-  color: #303030;
+  color: var(--minor-color);
   align-self: end;
 }
 
 .callToAction {
-  text-transform: uppercase;
   order: 4;
-  /* background-color: #000;
-  padding: 20px 40px;
-  border-radius: 5px; */
-  min-width: 240px;
   margin-left: 20px;
 }
 
 .callToAction div {
-  background-color: #fff;
-  padding: 20px 40px;
+  background-color: var(--minor-color);
+  padding: 14px 40px;
   border-radius: 5px;
 }
 
 .callToAction_btn {
+  min-width: 180px;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
   font-size: 17px;
-  font-weight: 700;
+  font-weight: 800;
   line-height: 26px;
   cursor: pointer;
   text-decoration: none;
-  color: #064488;
+  color: var(--primary-color);
+}
+
+@media (max-width: 960px) {
+  .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .telegram {
+    padding-left: 32px;
+    order: 4;
+    flex: 0 1 560px;
+    margin-top: 15px;
+  }
+
+  .callToAction {
+    order: 3;
+    margin-left: 20px;
+  }
+
+  .callToAction div {
+    background-color: var(--primary-color);
+    padding: 14px 32px;
+    border-radius: 5px;
+  }
+
+  .callToAction_btn {
+    color: var(--minor-color);
+  }
+
+  .tel_item {
+    color: var(--font-color-color);
+  }
+}
+
+@media (max-width: 640px) {
+  .section {
+    padding-bottom: 32px;
+  }
+
+  .wrapper {
+    justify-content: space-between;
+  }
+
+  .logo {
+    order: 1;
+  }
+  .callToAction {
+    order: 2;
+    margin-left: 20px;
+  }
+
+  .telegram {
+    order: 3;
+    flex: 0 1 200px;
+  }
+  .tel {
+    order: 4;
+  }
+}
+
+@media (max-width: 480px) {
+  .section {
+    padding-top: 35px;
+    padding-bottom: 10px;
+  }
+
+  .wrapper {
+    justify-content: space-around;
+  }
+
+  .logo {
+    order: 4;
+    margin: 0;
+  }
+
+  .logo svg {
+    width: 124px;
+    height: 54px;
+  }
+  .callToAction {
+    order: 3;
+
+    margin: 15px 0;
+  }
+
+  .telegram {
+    order: 2;
+    flex: 0 1 100px;
+    padding-left: 25px;
+    margin: 0;
+  }
+  .tel {
+    order: 1;
+  }
+
+  .telegram_link {
+    font-size: 14px;
+  }
 }
