--- a/styles/CallToAction.module.css
+++ b/styles/CallToAction.module.css
@@ -56,7 +56,7 @@
   letter-spacing: normal;
   position: relative;
   padding-bottom: 15px;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   text-transform: uppercase;
 }
 
@@ -68,4 +68,78 @@
   height: 3px;
   width: 100px;
   background-color: var(--primary-color);
+}
+
+.form input {
+  box-sizing: border-box;
+
+  width: 100%;
+  padding-top: 20px;
+  border: 1px solid #064488;
+  border-radius: 5px;
+  margin: 0;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 20px;
+  line-height: 1.33;
+  outline: none;
+  margin-bottom: 20px;
+}
+
+.form input::placeholder {
+  font-size: 14px;
+}
+
+.label_name,
+.label_tel {
+  display: block;
+  color: var(--primary-color);
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 5px;
+}
+
+.callToAction {
+  box-sizing: content-box;
+  width: 260px;
+  text-align: center;
+}
+
+.callToAction div {
+  background-color: var(--primary-color);
+  padding: 12px 10px;
+  border-radius: 5px;
+  margin: 25px 0 20px;
+}
+
+.callToAction_btn {
+  min-width: 180px;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.33;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--minor-color);
+}
+
+.terms {
+  font-size: 14px;
+  line-height: 14px;
+  vertical-align: middle;
+}
+
+.terms_btn {
+  background-color: transparent;
+  border: none;
+  font-weight: 600;
+  color: var(--primary-color);
+  font-size: 14px;
+  line-height: 14px;
+  text-decoration: solid underline currentColor 1px;
+  text-align: top;
+  vertical-align: middle;
+  margin-left: -2px;
 }
