--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -54,11 +54,10 @@
   border: none;
   background-color: transparent;
   color: #fff;
-  /* transition: opacity ease-in-out 0.3s; */
   font-size: 24px;
 }
 
-.form_tel label {
+.form_tel {
   display: inline-block;
   font-size: 14px;
   padding: 25px 0 15px;
@@ -99,7 +98,6 @@
   order: 4;
   margin-top: 30px;
   min-width: 240px;
-
   background-color: var(--primary-color);
   padding: 20px 40px;
   border-radius: 5px;
