--- a/styles/CallToAction.module.css
+++ b/styles/CallToAction.module.css
@@ -10,41 +10,39 @@
   display: flex;
   justify-content: space-between;
   column-gap: 50px;
-  padding-bottom: 50px;
-  padding-top: 85px;
+  padding-bottom: 70px;
+  padding-top: 100px;
 }
 
 .images {
   max-width: 560px;
-  position: relative;
   width: 100%;
   height: 412px;
-  /* height: 600px; */
+  position: relative;
+}
+
+.imageBack_inner {
+  max-width: 560px;
+  display: flex;
 }
 
 .imageBack {
   border-radius: 5px;
-  padding: 0;
-  object-fit: contain;
+  object-fit: cover;
 
   /* width={560} height={440} */
 }
 
-/* @media (max-width: 1000px) {
-  .images {
-    height: 200px;
-  }
-} */
 .imageFront {
-  position: absolute;
-
-  left: 10%;
-  bottom: 6px;
-  padding: 0;
+  border-radius: 5px;
+  object-fit: cover;
 }
 
-.text {
-  max-width: 560px;
+.imageFront {
+  position: absolute;
+  left: 10%;
+  bottom: 0;
+  padding: 0;
 }
 
 .title {
@@ -52,11 +50,12 @@
   font-size: 30px;
   font-weight: 800;
   line-height: 30px;
-  padding-top: 25px;
+  text-decoration: none solid rgb(48, 48, 48);
   letter-spacing: normal;
   position: relative;
+  padding-top: 90px;
   padding-bottom: 15px;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
   text-transform: uppercase;
 }
 
@@ -64,7 +63,8 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   height: 3px;
   width: 100px;
   background-color: var(--primary-color);
@@ -72,7 +72,6 @@
 
 .form input {
   box-sizing: border-box;
-
   width: 100%;
   padding-top: 20px;
   border: 1px solid #064488;
@@ -132,6 +131,7 @@
 }
 
 .terms_btn {
+  display: inline-block;
   background-color: transparent;
   border: none;
   font-weight: 600;
@@ -142,4 +142,149 @@
   text-align: top;
   vertical-align: middle;
   margin-left: -2px;
+}
+
+@media (max-width: 1200px) {
+  .wrapper {
+    align-items: end;
+    column-gap: 15px;
+  }
+
+  .images {
+    width: 460px;
+    height: 350px;
+    display: flex;
+  }
+
+  .imageBack_inner {
+    align-self: start;
+    width: 460px;
+    height: 350px;
+  }
+
+  .imageFront {
+    width: 325px;
+    height: 381px;
+  }
+
+  .text {
+    width: auto;
+  }
+
+  .title {
+    margin-bottom: 15px;
+  }
+
+  .form input {
+    margin-bottom: 15px;
+  }
+
+  .callToAction {
+    margin: 18px 0 16px;
+  }
+
+  .container {
+    max-width: var(--container-width);
+    padding: 0 10px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 960px) {
+  .wrapper {
+    flex-direction: column;
+    align-items: start;
+    padding: 70px 0 50px;
+  }
+
+  .images {
+    width: 380px;
+    height: 280px;
+    display: flex;
+  }
+
+  .imageBack_inner {
+    align-self: start;
+    width: 380px;
+    height: 280px;
+  }
+
+  .imageFront {
+    width: 262px;
+    height: 307px;
+  }
+
+  .title {
+    text-align: center;
+    padding-top: 34px;
+  }
+}
+
+@media (max-width: 640px) {
+  .images {
+    width: 460px;
+    height: 260px;
+  }
+
+  .imageBack_inner {
+    width: 460px;
+    height: 260px;
+  }
+
+  .imageFront {
+    width: 262px;
+    height: 307px;
+    left: 20%;
+  }
+
+  .text {
+    width: 460px;
+  }
+
+  .terms {
+    width: 400px;
+  }
+}
+
+@media (max-width: 480px) {
+  .images {
+    width: 300px;
+  }
+
+  .imageBack_inner {
+    width: 300px;
+  }
+
+  .imageFront {
+    width: 252px;
+    height: 295px;
+    left: 7%;
+  }
+
+  .text {
+    width: 300px;
+    text-align: center;
+  }
+
+  .label_name,
+  .label_tel {
+    text-align: left;
+  }
+
+  .callToAction {
+    margin: 0 auto;
+  }
+
+  .title {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .title::after {
+    height: 2px;
+  }
+
+  .terms {
+    width: 300px;
+  }
 }
