--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -209,23 +209,8 @@
   }
 }
 
-/* @media (max-width: 480px) {
-  .container {
-    text-align: center;
+@media (max-width: 480px) {
+  .title::after {
+    height: 2px;
   }
-
-  .title {
-    font-size: 30px;
-    line-height: 30px;
-  }
-
-  .subtitle,
-  .description {
-    font-size: 14px;
-    line-height: 18px;
-  }
-
-  .image {
-    width: 100%;
-  }
-} */
+}
