--- a/styles/Benefits.module.css
+++ b/styles/Benefits.module.css
@@ -8,9 +8,9 @@
 
 .title {
   display: inline-block;
-  font-size: 30px;
+  font-size: var(--title-font-size);
+  line-height: var(--title-line-height);
   font-weight: 800;
-  line-height: 30px;
   text-decoration: none solid rgb(48, 48, 48);
   letter-spacing: normal;
   position: relative;
@@ -161,13 +161,7 @@
 
 @media (max-width: 640px) {
   .title {
-    font-size: 24px;
-    line-height: 24px;
     padding-bottom: 10px;
-  }
-
-  .title::after {
-    height: 2px;
   }
 
   .items {
