--- a/styles/Capabilities.module.css
+++ b/styles/Capabilities.module.css
@@ -1,3 +1,9 @@
+.section {
+  overflow: hidden;
+  padding-top: 30px;
+  padding-bottom: 70px;
+}
+
 .container {
   max-width: var(--container-width);
   padding: 0 15px;
@@ -6,34 +12,31 @@
 
 .wrapper {
   display: flex;
-  height: 590px;
+  align-items: end;
+  justify-content: left;
+}
+
+.text {
+  width: 500px;
   font-size: 18px;
 }
 
-/* @media (max-width: 1220px) {
-	.section {
-	  height: 480px;
-	}
-  } */
-
 .info {
-  align-self: center;
-  padding-left: 30px;
-  width: 570px;
+  align-self: flex-end;
   margin-right: 50px;
 }
 
 .title {
-  font-size: 30px;
+  font-size: var(--title-font-size);
+  line-height: var(--title-line-height);
   font-weight: 800;
-  line-height: 30px;
   text-decoration: none solid rgb(48, 48, 48);
   letter-spacing: normal;
   position: relative;
+  top: 90px;
   padding-bottom: 15px;
-  max-width: 300px;
+  max-width: 500px;
   text-transform: uppercase;
-  margin-bottom: 40px;
 }
 
 .title::after {
@@ -47,6 +50,8 @@
 }
 
 .cities {
+  margin: 0;
+  padding: 0;
 }
 
 .cities_item {
@@ -76,6 +81,188 @@
   font-weight: 700;
   color: var(--primary-color);
   font-size: 18px;
-
+  cursor: pointer;
   text-decoration: solid underline currentColor 1px;
+  padding: 0;
+}
+
+.imageInner {
+  position: relative;
+  width: 500px;
+}
+
+.imageWrapper {
+  position: relative;
+  left: 0px;
+}
+
+img.image {
+  position: relative;
+  object-fit: contain;
+  z-index: 10;
+}
+
+@media screen and (max-width: 1200px) {
+  .section {
+    overflow: hidden;
+    padding-top: 0px;
+    padding-bottom: 70px;
+  }
+
+  .text {
+    width: 380px;
+    font-size: 16px;
+    line-height: 21px;
+  }
+
+  .title {
+    width: 400px;
+  }
+
+  .cities_item {
+    position: relative;
+    padding-left: 14px;
+    font-size: 16px;
+    margin-top: 0px;
+  }
+
+  .cities_item::before {
+    bottom: 4px;
+  }
+
+  .text_bottom {
+    padding: 20px 0;
+  }
+
+  .callToAction_btn {
+    font-weight: 700;
+    font-size: 16px;
+  }
+
+  .image {
+    width: 600px;
+    left: -25px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    flex-direction: column-reverse;
+  }
+
+  .title {
+    margin-bottom: 40px;
+  }
+
+  .wrapper {
+    align-items: flex-start;
+  }
+
+  .text {
+    width: 620px;
+  }
+
+  .info {
+    margin: 0;
+    align-self: start;
+  }
+
+  .image {
+    max-width: 620px;
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .section {
+    padding-bottom: 40px;
+  }
+  .title {
+    padding-bottom: 10px;
+    width: 320px;
+    top: 35px;
+  }
+
+  .text {
+    width: 460px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .cities_item {
+    padding-left: 14px;
+    font-size: 14px;
+  }
+  .cities_item::before {
+    bottom: 4px;
+    width: 7px;
+    height: 7px;
+  }
+
+  .text_bottom {
+    padding: 20px 0;
+  }
+  .callToAction_btn {
+    font-size: 14px;
+  }
+
+  .image,
+  .imageInner {
+    max-width: 460px;
+    left: 0;
+  }
+
+  .image {
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .title {
+    padding-bottom: 10px;
+    width: 320px;
+    top: 35px;
+  }
+
+  .title::after {
+    height: 2px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .text {
+    width: 320px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .cities_item {
+    padding-left: 14px;
+    font-size: 14px;
+  }
+  .cities_item::before {
+    bottom: 4px;
+    width: 7px;
+    height: 7px;
+  }
+
+  .text_bottom {
+    padding: 20px 0;
+  }
+  .callToAction_btn {
+    font-size: 14px;
+  }
+
+  .image,
+  .imageInner {
+    max-width: 320px;
+    left: 0;
+  }
+
+  .image {
+    height: auto;
+  }
 }
