--- a/styles/InviteFriend.module.css
+++ b/styles/InviteFriend.module.css
@@ -42,9 +42,9 @@
 }
 
 .title {
-  font-size: 30px;
+  font-size: var(--title-font-size);
+  line-height: var(--title-line-height);
   font-weight: 800;
-  line-height: 30px;
   text-decoration: none solid rgb(48, 48, 48);
   letter-spacing: normal;
   position: relative;
