--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,8 @@
   --font-color: #303030;
   --minor-color: #fff;
   --container-width: 1190px;
+  --title-font-size: 30px;
+  --title-line-height: 30px;
 }
 
 @media (max-width: 1200px) {
@@ -26,12 +28,16 @@
 @media (max-width: 640px) {
   :root {
     --container-width: 465px;
+    --title-font-size: 24px;
+    --title-line-height: 24px;
   }
 }
 
 @media (max-width: 480px) {
   :root {
     --container-width: 310px;
+    --title-font-size: 20px;
+    --title-line-height: 20px;
   }
 }
 
