--- a/styles/CallToAction.module.css
+++ b/styles/CallToAction.module.css
@@ -62,8 +62,7 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   height: 3px;
   width: 100px;
   background-color: var(--primary-color);
@@ -172,6 +171,11 @@
 
   .title {
     margin-bottom: 15px;
+  }
+
+  .title::after {
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .form input {
