--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -4,17 +4,13 @@
 
 .inner {
   max-width: 1700px;
+
   background-image: url(../public/assets/images/main-bg.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 700px;
   padding-bottom: 95px;
   margin: 0 auto;
-}
-
-.image_wrapper,
-.image {
-  display: none;
 }
 
 .container {
@@ -53,7 +49,7 @@
   line-height: 26px;
   max-width: 580px;
 }
-
+/* 
 @media (max-width: 1600px) {
   .inner {
     background-position: 580px;
@@ -168,8 +164,12 @@
 }
 
 @media (max-width: 640px) {
-  div.inner {
-    background-image: none;
+  .container {
+    min-height: 800px;
+  }
+  .inner {
+    background-size: 100%;
+    background-position: center bottom;
     padding-bottom: 0;
   }
 
@@ -213,4 +213,4 @@
   .title::after {
     height: 2px;
   }
-}
+} */
