--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -16,7 +16,7 @@
 }
 
 .container {
-  transform: translateY(30%) scale(0.9);
+  transform: translateY(30%);
   margin: 65px auto;
   top: 0;
   position: relative;
