--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -31,7 +31,7 @@
 }
 
 .wrapper {
-  padding: 40px 45px;
+  padding: 70px 45px 40px;
 }
 
 .form {
@@ -116,4 +116,11 @@
   text-decoration: none;
   color: #fff;
   outline: none;
+}
+
+@media screen and (max-width: 560px) {
+  .image {
+    height: 480px;
+    width: 736px;
+  }
 }
