--- a/styles/CallToAction.module.css
+++ b/styles/CallToAction.module.css
@@ -94,6 +94,9 @@
   outline: none;
   margin-bottom: 20px;
 }
+.form input:focus {
+  box-shadow: 0 0 0 1px #1976d2;
+}
 
 .form input::placeholder {
   font-size: 14px;
