--- a/styles/ModalTerms.module.css
+++ b/styles/ModalTerms.module.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
   position: fixed;
   top: 0;
   right: 0;
@@ -13,7 +13,7 @@
   display: block;
   padding-left: 20px;
   padding-right: 30px;
-}
+} */
 
 .container {
   margin: 65px auto;
