--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,17 +1,3 @@
-.error_text {
-  color: red;
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.form_error input {
-  border: 1px solid red;
-}
-
-.form input:focus,
-.form select:focus {
-  box-shadow: 0 0 0 1px #1976d2;
-}
 .modal {
   position: fixed;
   top: 0;
@@ -20,131 +6,39 @@
   left: 0;
   cursor: pointer;
   overflow-y: auto;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 10000;
   outline: 0;
-  display: block;
-  padding-left: 20px;
-  padding-right: 30px;
-}
+  display: flex;
 
-.container {
-  transform: translateY(30%);
-  margin: 65px auto;
-  top: 0;
-  position: relative;
-  left: auto;
-  right: auto;
-  width: 100%;
-  z-index: 1;
-  cursor: default;
-  background-color: #fff;
-  max-width: 550px;
-  box-sizing: content-box;
-}
-
-.wrapper {
-  padding: 70px 45px 40px;
-}
-
-.form {
   box-sizing: border-box;
 }
 
 .close_btn {
   position: fixed;
-  right: 20px;
-  top: 20px;
-  width: 23px;
-  height: 23px;
+  right: 60px;
+  top: 40px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   border: none;
   background-color: transparent;
-  color: #fff;
-  font-size: 24px;
-}
-
-.form_tel {
-  font-size: 14px;
-  padding: 25px 0 15px;
-}
-
-.label_tel {
-  line-height: 4;
-}
-
-.form input::placeholder {
-  font-size: 16px;
-}
-
-.form input,
-.depts {
-  box-sizing: border-box;
-  width: 100%;
-  padding-top: 20px;
-  border: 1px solid #c9c9c9;
-  border-radius: 5px;
-  margin: 0;
-  height: 60px;
-  padding: 0 20px;
-  font-size: 20px;
-  line-height: 1.33;
-  outline: none;
-}
-
-.form input:focus,
-.form select:focus {
-  box-shadow: 0 0 0 1px #1976d2;
-}
-
-.depts {
-  cursor: pointer;
-}
-
-.label_tel {
-  line-height: 4;
-}
-
-.label_dept {
-  font-size: 20px;
-  line-height: 1.55;
-  font-weight: 300;
-  padding: 25px 10px 10px 0;
-}
-
-.callToAction {
-  text-transform: uppercase;
-  order: 4;
-  margin-top: 30px;
-}
-
-.callToAction_btn {
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  line-height: 1.55;
-  font-weight: 500;
-  line-height: 26px;
-  cursor: pointer;
-  text-decoration: none;
-  color: #fff;
-  outline: none;
-  width: 100%;
-  min-width: 240px;
-  background-color: var(--primary-color);
-  padding: 20px 40px;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.callToAction .callToAction_btn:disabled {
-  background-color: #4278b16c;
+  color: #ffffffb4;
+  font-size: 36px;
 }
 
 @media screen and (max-width: 560px) {
-  .image {
-    height: 480px;
-    width: 736px;
+  div.modal {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 70px;
+    border: 2px solid red;
+    display: block;
+  }
+
+  .modal .container {
+    display: block;
+    /* height: auto; */
+    width: 100vw;
   }
 }
