--- a/styles/ModalTerms.module.css
+++ b/styles/ModalTerms.module.css
@@ -1,48 +1,24 @@
-/* .modal {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  cursor: pointer;
-  overflow-y: auto;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 10000;
-  outline: 0;
-  display: block;
-  padding-left: 20px;
-  padding-right: 30px;
-} */
-
 .container {
-  margin: 65px auto;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 70px;
   top: 0;
   position: relative;
   left: auto;
   right: auto;
-
+  height: max-content;
   z-index: 1;
   cursor: default;
   background-color: #fff;
-  max-width: 900px;
 }
-
 .wrapper {
-  padding: 40px 45px;
+  display: flex;
+  padding: 70px 45px 40px;
+  width: auto;
 }
 
-.close_btn {
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  width: 23px;
-  height: 23px;
-  cursor: pointer;
-  border: none;
-  background-color: transparent;
-  color: #fff;
-  font-size: 24px;
+.content {
+  max-width: 40vw;
 }
 
 .title {
@@ -73,6 +49,12 @@
   line-height: 1.45;
 }
 
+@media screen and (max-width: 1600px) {
+  .content {
+    max-width: 60vw;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .title_text {
     font-size: 30px;
@@ -82,5 +64,18 @@
 @media screen and (max-width: 640px) {
   .title_text {
     font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .wrapper {
+    /* width: 100%; */
+    height: auto;
+  }
+
+  .content {
+    max-width: 80vw;
+    height: 100%;
+    background-color: #fff;
   }
 }
