--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -31,14 +31,13 @@
   div.modal {
     padding-left: 0;
     padding-right: 0;
-    padding-top: 70px;
+    padding-top: 60px;
     border: 2px solid red;
     display: block;
   }
-
+  /* 
   .modal .container {
     display: block;
-    /* height: auto; */
-    width: 100vw;
-  }
+      width: 100vw;
+  } */
 }
