--- a/styles/Capabilities.module.css
+++ b/styles/Capabilities.module.css
@@ -99,6 +99,8 @@ img.image {
   position: relative;
   object-fit: contain;
   z-index: 10;
+  width: auto;
+  height: auto;
 }
 
 @media screen and (max-width: 1200px) {
