--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -65,21 +65,26 @@
   height: 20px;
   transform: translateY(-50%);
 }
+.privacy_btn {
+  background-color: transparent;
+  border: none;
+  text-align: left;
+  padding: 0;
+}
 
 .tel_item,
 .email_link,
-.privacy_link,
+.privacy_btn,
 .copy {
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
-
   text-decoration: none;
   color: inherit;
 }
 
 .email_link,
-.privacy_link,
+.privacy_btn,
 .tel_item {
   cursor: pointer;
 }
