refactoring: moved components to dirs

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -4,7 +4,7 @@
 
 .inner {
   max-width: 1980px;
-  background-image: url(../public/assets/images/main-bg.png);
+  background-image: url(../../public/assets/images/main-bg.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: right top;
