--- a/components/modal/ModalSubmitted.module.css
+++ b/components/modal/ModalSubmitted.module.css
@@ -40,6 +40,14 @@
   background: transparent;
 }
 
+.closeCross {
+  width: 14px;
+  height: 14px;
+  color: #000;
+  padding: 6px;
+}
+
+
 @media screen and (max-width: 560px) {
   div.modal {
     padding-left: 0;
