--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -56,7 +56,7 @@
 .email_link::before {
   content: "";
 
-  background-image: url(../../public/assets/icons/mail.svg);
+  background-image: url("../../icons/mail.svg");
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
