--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -37,7 +37,7 @@
 
 .tel::before {
     content: "";
-    background-image: url(../../public/assets/icons/tel.svg);
+    background-image: url(../../assets/icons/telephone.svg);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
