--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,187 +1,187 @@
 .section {
-  background-color: transparent;
-  max-width: var(--container-width);
-  padding-top: 50px;
-  padding-bottom: 60px;
-  margin: 0 auto;
+    background-color: transparent;
+    max-width: var(--container-width);
+    padding-top: 50px;
+    padding-bottom: 60px;
+    margin: 0 auto;
 }
 
 .wrapper {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .logo {
-  width: 164px;
-  height: 72px;
-  order: 1;
-  margin-right: 35px;
+    width: 164px;
+    height: 72px;
+    order: 1;
+    margin-right: 35px;
 }
 
 .telegram {
-  position: relative;
-  padding-left: 32px;
-  order: 2;
-  flex: 0 1 560px;
+    position: relative;
+    padding-left: 32px;
+    order: 2;
+    flex: 0 1 560px;
 }
 
 .telegram::before {
-  content: "";
-  background-image: url(../../public/assets/icons/teleg.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 4px;
-  left: 0;
-  width: 20px;
-  height: 20px;
+    content: "";
+    background-image: url(../../assets/icons/telegram.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 4px;
+    left: 0;
+    width: 20px;
+    height: 20px;
 }
 
 .telegram_link {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 28px;
-  cursor: pointer;
-  text-decoration: none;
-  color: var(--font-color);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--font-color);
 }
 
 .tel {
-  display: flex;
-  flex-direction: column;
-  order: 3;
-  min-width: 145px;
+    display: flex;
+    flex-direction: column;
+    order: 3;
+    min-width: 145px;
 }
 
 .tel_item {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 28px;
-  cursor: pointer;
-  text-decoration: none;
-  color: var(--minor-color);
-  align-self: end;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--minor-color);
+    align-self: end;
 }
 
 .callToAction {
-  order: 4;
-  margin-left: 20px;
+    order: 4;
+    margin-left: 20px;
 }
 
 .callToAction div {
-  background-color: var(--minor-color);
-  padding: 14px 40px;
-  border-radius: 5px;
+    background-color: var(--minor-color);
+    padding: 14px 40px;
+    border-radius: 5px;
 }
 
 .callToAction_btn {
-  min-width: 180px;
-  text-transform: uppercase;
-  background-color: transparent;
-  border: none;
-  font-size: 17px;
-  font-weight: 800;
-  line-height: 26px;
-  cursor: pointer;
-  text-decoration: none;
-  color: var(--primary-color);
+    min-width: 180px;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: none;
+    font-size: 17px;
+    font-weight: 800;
+    line-height: 26px;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--primary-color);
 }
 
 @media (max-width: 960px) {
-  .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  .telegram {
-    padding-left: 32px;
-    order: 4;
-    flex: 0 1 560px;
-    margin-top: 15px;
-  }
+    .wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .telegram {
+        padding-left: 32px;
+        order: 4;
+        flex: 0 1 560px;
+        margin-top: 15px;
+    }
 
-  .callToAction {
-    order: 3;
-    margin-left: 20px;
-  }
+    .callToAction {
+        order: 3;
+        margin-left: 20px;
+    }
 
-  .callToAction div {
-    background-color: var(--primary-color);
-    padding: 14px 32px;
-    border-radius: 5px;
-  }
+    .callToAction div {
+        background-color: var(--primary-color);
+        padding: 14px 32px;
+        border-radius: 5px;
+    }
 
-  .callToAction_btn {
-    color: var(--minor-color);
-  }
+    .callToAction_btn {
+        color: var(--minor-color);
+    }
 
-  .tel_item {
-    color: var(--font-color-color);
-  }
+    .tel_item {
+        color: var(--font-color-color);
+    }
 }
 
 @media (max-width: 640px) {
-  .section {
-    padding-bottom: 32px;
-  }
+    .section {
+        padding-bottom: 32px;
+    }
 
-  .wrapper {
-    justify-content: space-between;
-  }
+    .wrapper {
+        justify-content: space-between;
+    }
 
-  .logo {
-    order: 1;
-  }
-  .callToAction {
-    order: 2;
-    margin-left: 20px;
-  }
+    .logo {
+        order: 1;
+    }
+    .callToAction {
+        order: 2;
+        margin-left: 20px;
+    }
 
-  .telegram {
-    order: 3;
-    flex: 0 1 200px;
-  }
-  .tel {
-    order: 4;
-  }
+    .telegram {
+        order: 3;
+        flex: 0 1 200px;
+    }
+    .tel {
+        order: 4;
+    }
 }
 
 @media (max-width: 480px) {
-  .section {
-    padding-top: 35px;
-    padding-bottom: 10px;
-  }
+    .section {
+        padding-top: 35px;
+        padding-bottom: 10px;
+    }
 
-  .wrapper {
-    justify-content: space-around;
-  }
+    .wrapper {
+        justify-content: space-around;
+    }
 
-  .logo {
-    order: 4;
-    margin: 0;
-  }
+    .logo {
+        order: 4;
+        margin: 0;
+    }
 
-  .logo svg {
-    width: 124px;
-    height: 54px;
-  }
-  .callToAction {
-    order: 3;
+    .logo svg {
+        width: 124px;
+        height: 54px;
+    }
+    .callToAction {
+        order: 3;
 
-    margin: 15px 0;
-  }
+        margin: 15px 0;
+    }
 
-  .telegram {
-    order: 2;
-    flex: 0 1 100px;
-    padding-left: 25px;
-    margin: 0;
-  }
-  .tel {
-    order: 1;
-  }
+    .telegram {
+        order: 2;
+        flex: 0 1 100px;
+        padding-left: 25px;
+        margin: 0;
+    }
+    .tel {
+        order: 1;
+    }
 
-  .telegram_link {
-    font-size: 14px;
-  }
+    .telegram_link {
+        font-size: 14px;
+    }
 }
