--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,156 +1,156 @@
 .section {
-  background-color: var(--main-bg-color);
+    background-color: var(--main-bg-color);
 }
 
 .inner {
-  max-width: 1980px;
-  background-image: url(../../public/assets/images/main-bg.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: right top;
-  padding-bottom: 95px;
-  margin: 0 auto;
+    max-width: 1980px;
+    background-image: url(../../assets/images/main-bg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right top;
+    padding-bottom: 95px;
+    margin: 0 auto;
 }
 
 .container {
-  max-width: var(--container-width);
-  padding: 0 15px;
-  margin: 0 auto;
-  overflow: hidden;
+    max-width: var(--container-width);
+    padding: 0 15px;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
 .title {
-  text-transform: uppercase;
-  font-size: 56px;
-  font-weight: 800;
-  line-height: 56px;
-  color: var(--primary-color);
-  max-width: 840px;
-  margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 56px;
+    font-weight: 800;
+    line-height: 56px;
+    color: var(--primary-color);
+    max-width: 840px;
+    margin-bottom: 20px;
 }
 
 .title span {
-  color: var(--accent-color);
+    color: var(--accent-color);
 }
 
 .subtitle {
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 31px;
-  color: var(--accent-color);
-  max-width: 450px;
-  margin-bottom: 30px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 31px;
+    color: var(--accent-color);
+    max-width: 450px;
+    margin-bottom: 30px;
 }
 
 .description {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 26px;
-  max-width: 580px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+    max-width: 580px;
 }
 @media screen and (max-width: 1980px) {
-  .inner {
-    background-position: 35vw top;
-  }
+    .inner {
+        background-position: 35vw top;
+    }
 }
 @media screen and (max-width: 1200px) {
-  .inner {
-    background-position: calc(30vw - 10px) top;
-  }
+    .inner {
+        background-position: calc(30vw - 10px) top;
+    }
 
-  .title {
-    font-size: 40px;
-    line-height: 40px;
-    max-width: 570px;
-  }
+    .title {
+        font-size: 40px;
+        line-height: 40px;
+        max-width: 570px;
+    }
 
-  .subtitle,
-  .description {
-    font-size: 16px;
-    line-height: 21px;
-    max-width: 450px;
-  }
+    .subtitle,
+    .description {
+        font-size: 16px;
+        line-height: 21px;
+        max-width: 450px;
+    }
 }
 @media screen and (max-width: 960px) {
-  .inner {
-    background-position: 30vw top;
-    padding-bottom: 155px;
-    background-size: cover;
-  }
+    .inner {
+        background-position: 30vw top;
+        padding-bottom: 155px;
+        background-size: cover;
+    }
 
-  .title {
-    font-size: 36px;
-    line-height: 36px;
-    max-width: 470px;
-  }
+    .title {
+        font-size: 36px;
+        line-height: 36px;
+        max-width: 470px;
+    }
 
-  .subtitle,
-  .description {
-    font-size: 16px;
-    line-height: 21px;
-    max-width: 380px;
-  }
+    .subtitle,
+    .description {
+        font-size: 16px;
+        line-height: 21px;
+        max-width: 380px;
+    }
 }
 @media screen and (max-width: 750px) {
-  .inner {
-    background-position: 20vw top;
-  }
+    .inner {
+        background-position: 20vw top;
+    }
 }
 @media screen and (max-width: 660px) {
-  .inner {
-    background-position: 15vw top;
-  }
+    .inner {
+        background-position: 15vw top;
+    }
 }
 @media screen and (max-width: 640px) {
-  .container {
-    min-height: 950px;
-  }
-  .inner {
-    background-size: 100%;
-    background-position: center bottom;
-    padding-bottom: 0;
-  }
+    .container {
+        min-height: 950px;
+    }
+    .inner {
+        background-size: 100%;
+        background-position: center bottom;
+        padding-bottom: 0;
+    }
 
-  .title {
-    font-size: 32px;
-    line-height: 32px;
-    max-width: 100%;
-  }
+    .title {
+        font-size: 32px;
+        line-height: 32px;
+        max-width: 100%;
+    }
 
-  .subtitle,
-  .description {
-    font-size: 16px;
-    line-height: 21px;
-    max-width: 100%;
-  }
+    .subtitle,
+    .description {
+        font-size: 16px;
+        line-height: 21px;
+        max-width: 100%;
+    }
 
-  .subtitle {
-    margin-bottom: 20px;
-  }
+    .subtitle {
+        margin-bottom: 20px;
+    }
 
-  .description {
-    padding-left: 20px;
-    padding-bottom: 15px;
-  }
+    .description {
+        padding-left: 20px;
+        padding-bottom: 15px;
+    }
 }
 @media screen and (max-width: 540px) {
-  .container {
-    min-height: 920px;
-  }
+    .container {
+        min-height: 920px;
+    }
 }
 @media screen and (max-width: 480px) {
-  .container {
-    min-height: 1050px;
-  }
-  .title::after {
-    height: 2px;
-  }
+    .container {
+        min-height: 1050px;
+    }
+    .title::after {
+        height: 2px;
+    }
 }
 @media screen and (max-width: 440px) {
-  .container {
-    min-height: 1000px;
-  }
-  .title::after {
-    height: 2px;
-  }
+    .container {
+        min-height: 1000px;
+    }
+    .title::after {
+        height: 2px;
+    }
 }
