--- a/src/components/Capabilities/Capabilities.module.css
+++ b/src/components/Capabilities/Capabilities.module.css
@@ -14,6 +14,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: left;
+    min-height: 430px;
 }
 .info {
     align-self: flex-end;
@@ -35,6 +36,7 @@
     padding-top: 70px;
     padding-bottom: 15px;
     margin-bottom: 30px;
+    bottom: -70px;
     max-width: 500px;
     text-transform: uppercase;
 }
