--- a/src/components/CallToAction/CallToAction.module.css
+++ b/src/components/CallToAction/CallToAction.module.css
@@ -90,8 +90,7 @@
     width: 100%;
     height: 50px;
     margin: 0;
-    padding: 0 20px;
-    padding-top: 20px;
+    padding: 20px;
 
     font-size: 20px;
     line-height: 1.33;
