--- a/src/components/Modal/ModalForm.module.css
+++ b/src/components/Modal/ModalForm.module.css
@@ -1,5 +1,5 @@
 .error_text {
-    margin-top: 3px;
+    margin-top: 10px;
 
     color: red;
     font-size: 14px;
@@ -58,10 +58,8 @@
 .depts {
     box-sizing: border-box;
     width: 100%;
-    height: 60px;
     margin: 0;
-    padding: 0 20px;
-    padding-top: 20px;
+    padding: 20px;
 
     font-size: 20px;
     line-height: 1.33;
