--- a/src/components/Capabilities/Capabilities.module.css
+++ b/src/components/Capabilities/Capabilities.module.css
@@ -14,8 +14,8 @@
     display: flex;
     align-items: flex-end;
     justify-content: left;
-    min-height: 430px;
 }
+
 .info {
     align-self: flex-end;
     margin-right: 50px;
@@ -23,16 +23,16 @@
 
 .text {
     width: 500px;
+    margin-top: 20px;
 
     font-size: 18px;
 }
 
 .title {
     position: relative;
-    bottom: -70px;
 
     max-width: 500px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     padding-top: 70px;
     padding-bottom: 15px;
 
@@ -107,17 +107,8 @@
     width: 500px;
 }
 
-.imageWrapper {
-    position: relative;
-    left: 0px;
-}
-
 img.image {
-    position: relative;
-    z-index: 10;
-
-    width: auto;
-    height: auto;
+    max-height: 290px;
     object-fit: contain;
 }
 
